# cpen513a3

./: README.md
src/: .gitignore  CMakeLists.txt  README.md  benchmarker.cc  benchmarker.h  main.cc  spatial.cc  spatial.h
src/bench_json/: test_1t.json  test_8t.json
src/gui/: dtviewer.cc  dtviewer.h  invoker.cc  invoker.h  mainwindow.cc  mainwindow.h  partviewer.cc  partviewer.h  settings.cc  settings.h  telemetrychart.cc  telemetrychart.h  viewer.cc  viewer.h
src/gui/prim/: cell.cc  cell.h  graph_mask.cc  graph_mask.h  net.cc  net.h
src/partitioner/: partitioner.cc  partitioner.h
src/qrc/: application.qrc
src/qrc/test_problems/: atest2.txt  atest2_props.json  atest3.txt  atest3_props.json  atest4.txt  atest4_props.json  baby.txt  baby_props.json  mini_props.json
src/tests/: partitioner_tests.cpp
